tests/errors/semantics/use_of_undeclared_identifier/undeclared_identifier.c
// Use of undeclared identifier
void main()
{
	i;
}
